Bug 262098 - [Win] Fix unused parameter warnings reported by clang-cl
Summary: [Win] Fix unused parameter warnings reported by clang-cl
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Fujii Hironori
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-09-25 23:09 PDT by Fujii Hironori
Modified: 2023-09-25 23:45 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fujii Hironori 2023-09-25 23:09:50 PDT
Windows port suppresses this warning by setting /wd4100 compiler switch.
However, the combination of CMake Visual Studio generator and clang-cl ignores the switch.
clang-cl reports a lot of unused parameter warnings.

> Source\WebCore\platform/StaticPasteboard.cpp(143,58): error: unused parameter 'content' [-Werror,-Wunused-parameter]
Comment 1 Fujii Hironori 2023-09-25 23:14:54 PDT
Pull request: https://github.com/WebKit/WebKit/pull/18209
Comment 2 EWS 2023-09-25 23:44:47 PDT
Committed 268434@main (6cc3f85ca0cf): <https://commits.webkit.org/268434@main>

Reviewed commits have been landed. Closing PR #18209 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-09-25 23:45:14 PDT
<rdar://problem/116038874>