[Win] Fix unused parameter warnings reported by clang-cl https://bugs.webkit.org/show_bug.cgi?id=262098

Reviewed by Ross Kirsling.

clang-cl reported a lot of unused parameter warnings like the following.

> Source\WebCore\platform/StaticPasteboard.cpp(143,58): error: unused parameter 'content' [-Werror,-Wunused-parameter]

* Source/WTF/wtf/win/FileSystemWin.cpp:
(WTF::FileSystemImpl::fileID):
(WTF::FileSystemImpl::fileIDsAreEqual):
(WTF::FileSystemImpl::flushFile):
* Source/WTF/wtf/win/MemoryPressureHandlerWin.cpp:
(WTF::MemoryPressureHandler::holdOff):
* Source/WTF/wtf/win/OSAllocatorWin.cpp:
(WTF::OSAllocator::tryReserveUncommittedAligned):
* Source/WebCore/accessibility/win/AccessibilityObjectWin.cpp:
(WebCore::AccessibilityObject::detachPlatformWrapper):
* Source/WebCore/platform/graphics/Image.h:
(WebCore::Image::drawFrameMatchingSourceSize):
* Source/WebCore/platform/graphics/win/FontCacheWin.cpp:
(WebCore::metaFileEnumProc):
(WebCore::linkedFontEnumProc):
(WebCore::matchImprovingEnumProc):
(WebCore::traitsInFamilyEnumProc):
* Source/WebCore/platform/graphics/win/FontPlatformDataCairoWin.cpp:
(WebCore::FontPlatformData::platformDataInit):
* Source/WebCore/platform/graphics/win/GraphicsContextCairoWin.cpp:
(WebCore::createCairoContextWithHDC):
(WebCore::GraphicsContextCairo::GraphicsContextCairo):
* Source/WebCore/platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp:
(WebCore::MediaPlayerPrivateMediaFoundation::CustomVideoPresenter::OnClockStart):
(WebCore::MediaPlayerPrivateMediaFoundation::CustomVideoPresenter::OnClockStop):
(WebCore::MediaPlayerPrivateMediaFoundation::CustomVideoPresenter::OnClockPause):
(WebCore::MediaPlayerPrivateMediaFoundation::CustomVideoPresenter::OnClockRestart):
(WebCore::MediaPlayerPrivateMediaFoundation::CustomVideoPresenter::OnClockSetRate):
(WebCore::MediaPlayerPrivateMediaFoundation::CustomVideoPresenter::ProcessMessage):
(WebCore::MediaPlayerPrivateMediaFoundation::Direct3DPresenter::getService):
(WebCore::MediaPlayerPrivateMediaFoundation::Direct3DPresenter::presentSample):
* Source/WebCore/platform/graphics/win/MediaPlayerPrivateMediaFoundation.h:
* Source/WebCore/platform/graphics/win/SimpleFontDataWin.cpp:
(WebCore::Font::platformCreateScaledFont const):
* Source/WebCore/platform/network/win/NetworkStateNotifierWin.cpp:
(WebCore::NetworkStateNotifier::addressChangeCallback):
* Source/WebCore/platform/win/PasteboardWin.cpp:
(WebCore::Pasteboard::writePlainTextToDataObject):
* Source/WebCore/platform/win/PlatformMouseEventWin.cpp:
(WebCore::positionForEvent):
* Source/WebCore/platform/win/WidgetWin.cpp:
(WebCore::Widget::setFocus):
* Source/WebDriver/win/WebDriverServiceWin.cpp:
(WebDriver::WebDriverService::platformCompareBrowserVersions):
(WebDriver::WebDriverService::platformValidateCapability const):
* Tools/MiniBrowser/win/DialogHelper.h:
(Dialog::command):
* Tools/MiniBrowser/win/InjectedBundle.cpp:
(didReceiveMessageToPage):
* Tools/MiniBrowser/win/WebKitBrowserWindow.cpp:
(WebKitBrowserWindow::navigateToHistory):
(WebKitBrowserWindow::updateStatistics):
(WebKitBrowserWindow::decidePolicyForNavigationResponse):
(WebKitBrowserWindow::didFailProvisionalNavigation):
(WebKitBrowserWindow::didReceiveAuthenticationChallenge):
(WebKitBrowserWindow::createNewPage):
(WebKitBrowserWindow::runJavaScriptAlert):
(WebKitBrowserWindow::runJavaScriptConfirm):
(WebKitBrowserWindow::runJavaScriptPrompt):
* Tools/MiniBrowser/win/WinMain.cpp:
(wWinMain):

Canonical link: https://commits.webkit.org/268434@main