Source/WebDriver/win/WebDriverServiceWin.cpp
@@ -43,12 +43,12 @@ Capabilities WebDriverService::platformCapabilities()
     return capabilities;
 }
 
-bool WebDriverService::platformCompareBrowserVersions(const String& requiredVersion, const String& proposedVersion)
+bool WebDriverService::platformCompareBrowserVersions(const String&, const String&)
 {
     return true;
 }
 
-bool WebDriverService::platformValidateCapability(const String& name, const Ref<JSON::Value>& value) const
+bool WebDriverService::platformValidateCapability(const String&, const Ref<JSON::Value>&) const
 {
     return true;
 }
